--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.2.2",
     "next": "14.1.3",
+    "plausible-tracker": "^0.3.9",
     "react": "^18",
     "react-dom": "^18"
   },
